--- a/app/globals.css
+++ b/app/globals.css
@@ -6,7 +6,7 @@ html,
 body {
 	padding: 0;
 	margin: 0;
-	font-family: proxima-nova, sans-serif;
+	font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
 }
 
 a {
@@ -16,26 +16,4 @@ a {
 
 * {
 	box-sizing: border-box;
-}
-
-.custom-animation-pulse {
-	-webkit-animation: pulse 2s infinite;
-	animation: pulse 2s infinite
-}
-
-@keyframes pulse {
-    0% {
-        -webkit-box-shadow: 0 0 0 0 rgba(59,214,113,.4);
-        box-shadow: 0 0 0 0 rgba(59,214,113,.4)
-    }
-
-    70% {
-        -webkit-box-shadow: 0 0 0 10px transparent;
-        box-shadow: 0 0 0 10px transparent
-    }
-
-    to {
-        -webkit-box-shadow: 0 0 0 0 transparent;
-        box-shadow: 0 0 0 0 transparent
-    }
 }
